fix: text tokenのスタイル修正、共通化、spacing-max追加

--- a/packages/components/src/foundation/_spacing.scss
+++ b/packages/components/src/foundation/_spacing.scss
@@ -5,3 +5,4 @@ $spacing-lg: 1.5rem !default;
 $spacing-2xl: 2rem !default;
 $spacing-3xl: 3rem !default;
 $spacing-4xl: 4rem !default;
+$spacing-max: 9999px !default;
